@@ -1,3 +1,7 @@
+WIP
+fixed crash drone having higher reduction per level than intended
+optimized some stat calculation to avoid weird rounding errors
+
 Version 2.0.2 - 19/10/2024
 - Added a helper for modders who have certain US planets in their system or that generate procgen systems after a game has started.
 - Fixed certain US planet types not spawning with the correct conditions in the Core-Worlds.
